--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
 
                 <h2>Чем мы занимаемся</h2>
-                <img src="./img/внимание к деталям.png" alt="" width="370" />
-                <img src="./img/планирование.png" alt="" width="370" />
-                <img src="./img/современные технологии.png" alt="" width="370" />
+                <img src="./img/Внимание к деталям.png" alt="" width="370" />
+                <img src="./img/Планирование.png" alt="" width="370" />
+                <img src="./img/Современные технологии.png" alt="" width="370" />
             </section>
 
             <section>
