Изменила название картинок

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
 
                 <h2>Чем мы занимаемся</h2>
-                <img src="./img/Внимание к деталям.png" alt="" width="370" />
-                <img src="./img/Планирование.png" alt="" width="370" />
-                <img src="./img/Современные технологии.png" alt="" width="370" />
+                <img src="./img/1.png" alt="Внимание к деталям" width="370" />
+                <img src="./img/2.png" alt="Планирование" width="370" />
+                <img src="./img/3.png" alt="Современные технологии" width="370" />
             </section>
 
             <section>
