--- a/index.html
+++ b/index.html
@@ -71,20 +71,18 @@
 
             <section>
                 <h2>Наша команда</h2>
-                <ul>
-                    <li><img src="./img/Игорь Демьяненко.jpg" alt="" width="270" /></li>
+                    <img src="./img/Игорь Демьяненко.jpg" alt="" width="270" />
                     <p>Игорь Демьяненко</p>
                     <p>Product Designer</p>
-                    </li><img src="./img/Ольга Репина.jpg" alt="" width="270" /></li>
+                    <img src="./img/Ольга Репина.jpg" alt="" width="270" />
                     <p>Ольга Репина</p>
                     <p>Frontend Developer</p>
-                    </li><img src="./img/Николай Тарасов.jpg" alt="" width="270" /></li>
+                    <img src="./img/Николай Тарасов.jpg" alt="" width="270" />
                     <p>Николай Тарасов</p>
                     <p>Marketing</p>
-                    </li><img src="./img/Михаил Ермаков.jpg" alt="" width="270" /></li>
+                    <img src="./img/Михаил Ермаков.jpg" alt="" width="270" />
                     <p>Михаил Ермаков</p>
                     <p>UI Designer</p>
-                </ul>
             </section>
             </div>
     </main>
