Убрала лишние абзацы
Из было слишком много и в списках их ставить нельзя!

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
             <section>
                 <h2>Наша команда</h2>
-                    <img src="./img/Игорь Демьяненко.jpg" alt="" width="270" />
+                    <img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" />
                     <p>Игорь Демьяненко</p>
                     <p>Product Designer</p>
-                    <img src="./img/Ольга Репина.jpg" alt="" width="270" />
+                    <img src="./img/5.jpg" alt="Ольга Репина" width="270" />
                     <p>Ольга Репина</p>
                     <p>Frontend Developer</p>
-                    <img src="./img/Николай Тарасов.jpg" alt="" width="270" />
+                    <img src="./img/6.jpg" alt="Николай Тарасов" width="270" />
                     <p>Николай Тарасов</p>
                     <p>Marketing</p>
-                    <img src="./img/Михаил Ермаков.jpg" alt="" width="270" />
+                    <img src="./img/7.jpg" alt="Михаил Ермаков" width="270" />
                     <p>Михаил Ермаков</p>
                     <p>UI Designer</p>
             </section>
@@ -89,18 +89,10 @@
 
     <footer>
         <ul>
-            <p>
                 <li>WebStudio</li>
-            </p>
-            <p>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
-            </p>
-            <p>
                 <li><a href="">info@example.com</a></li>
-            </p>
-            <p>
                 <li><a href="">+38 099 111 11 11</a></li>
-            </p>
         </ul>
     </footer>
 </body>
