--- a/index.html
+++ b/index.html
@@ -88,12 +88,18 @@
     </main>
 
     <footer>
-        <ul>
-                <li>WebStudio</li>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
-                <li><a href="">info@example.com</a></li>
-                <li><a href="">+38 099 111 11 11</a></li>
-        </ul>
+        <address>
+            WebStudio
+        </address>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <address>
+            <a href="">info@example.com</a>
+        </address>
+        <address>
+            <a href="">+38 099 111 11 11</a>
+        </address>
     </footer>
 </body>
 
