Добавила тег br

--- a/index.html
+++ b/index.html
@@ -89,15 +89,9 @@
 
     <footer>
         <address>
-            WebStudio
-        </address>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-        <address>
-            <a href="">info@example.com</a>
-        </address>
-        <address>
+            WebStudio<br>
+            г. Киев, пр-т Леси Украинки, 26<br>
+            <a href="">info@example.com</a><br>
             <a href="">+38 099 111 11 11</a>
         </address>
     </footer>
