--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <div>
             <section>
                 <h1>Эффективные решения<br />для вашего бизнеса</h1>
-                <a href="">Заказать услугу</a>
+                <button>
+                    Заказать услугу
+                </button>
             </section>
 
             <section>
