--- a/index.html
+++ b/index.html
@@ -73,18 +73,20 @@
 
             <section>
                 <h2>Наша команда</h2>
+                <ul>
                     <img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" />
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <li>Игорь Демьяненко</li>
+                    <li>Product Designer</li>
                     <img src="./img/5.jpg" alt="Ольга Репина" width="270" />
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <li>Ольга Репина</li>
+                    <li>Frontend Developer</li>
                     <img src="./img/6.jpg" alt="Николай Тарасов" width="270" />
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <li>Николай Тарасов</li>
+                    <li>Marketing</li>
                     <img src="./img/7.jpg" alt="Михаил Ермаков" width="270" />
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <li>Михаил Ермаков</li>
+                    <li>UI Designer</li>
+                </ul>
             </section>
             </div>
     </main>
