--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
     <footer>
         <address>
             WebStudio<br>
-            г. Киев, пр-т Леси Украинки, 26<br>
+            г. Киев, пр-т Леси Украинки, 26
+        </address>
+        <address>    
             <a href="">info@example.com</a><br>
             <a href="">+38 099 111 11 11</a>
         </address>
