--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="">
-                WebStudio
-            </a>
+            <a href="">WebStudio</a>
 
             <ul>
                 <li><a href="">Студия</a></li>
@@ -92,8 +90,8 @@
     </main>
 
     <footer>
+        <a href="">WebStudio</a>
         <address>
-            WebStudio<br>
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <address>    
