--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <nav>
-            <a href="">WebStudio</a>
+            <a href="">
+                WebStudio
+            </a>
 
             <ul>
                 <li><a href="">Студия</a></li>
@@ -90,7 +92,9 @@
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a href="">
+            WebStudio
+        </a>
         <address>
             г. Киев, пр-т Леси Украинки, 26
         </address>
