--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -20,21 +21,16 @@
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-
-            <ul>
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
-            </ul>
+                <a href="">info@devstudio.com</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
         </nav>
     </header>
-    <main>
 
+    <main>
         <div>
             <section>
                 <h1>Эффективные решения<br />для вашего бизнеса</h1>
-                <button>
-                    Заказать услугу
-                </button>
+                <button type="button">Заказать услугу</button>   
             </section>
 
             <section>
