--- a/index.html
+++ b/index.html
@@ -21,70 +21,71 @@
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
-                <a href="">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
         </nav>
+                <a href="">info@devstudio.com</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>    
     </header>
 
     <main>
-        <div>
-            <section>
+        <section>
                 <h1>Эффективные решения<br />для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>   
+        </section>
+
+        <section>
+            <ul>
+                <li>
+                    <h2>Внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h2>Пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h2>Планирование</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <h2>Современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
             </section>
+            <section>
+                <h3>Чем мы занимаемся</h3>
+                <ul>
+                    <li><img src="./img/1.png" alt="Внимание к деталям" width="370" /></li>
+                    <li><img src="./img/2.png" alt="Планирование" width="370" /></li>
+                    <li><img src="./img/3.png" alt="Современные технологии" width="370" /></li>
+                </ul>
+            </section>
+          
 
             <section>
+                <h3>Наша команда</h3>
                 <ul>
-                    <li>
-                        <h2>Внимание к деталям</h2>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Пунктуальность</h2>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Планирование</h2>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <h2>Современные технологии</h2>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-
-
-
-                <h2>Чем мы занимаемся</h2>
-                <img src="./img/1.png" alt="Внимание к деталям" width="370" />
-                <img src="./img/2.png" alt="Планирование" width="370" />
-                <img src="./img/3.png" alt="Современные технологии" width="370" />
-            </section>
-
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
-                    <img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" />
-                    <li>Игорь Демьяненко</li>
-                    <li>Product Designer</li>
-                    <img src="./img/5.jpg" alt="Ольга Репина" width="270" />
-                    <li>Ольга Репина</li>
-                    <li>Frontend Developer</li>
-                    <img src="./img/6.jpg" alt="Николай Тарасов" width="270" />
-                    <li>Николай Тарасов</li>
-                    <li>Marketing</li>
-                    <img src="./img/7.jpg" alt="Михаил Ермаков" width="270" />
-                    <li>Михаил Ермаков</li>
-                    <li>UI Designer</li>
+                    <li><img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" /></li>
+                    <h3>Игорь Демьяненко</h3>
+                    Product Designer
+                    <li><img src="./img/5.jpg" alt="Ольга Репина" width="270" /></li>
+                    <h3>Ольга Репина</h3>
+                    Frontend Developer
+                    <li><img src="./img/6.jpg" alt="Николай Тарасов" width="270" /><li>
+                    <h3>Николай Тарасов</h3>
+                    Marketing
+                    <li><img src="./img/7.jpg" alt="Михаил Ермаков" width="270" /></li>
+                    <h3>Михаил Ермаков</h3>
+                    UI Designer
                 </ul>
             </section>
-            </div>
+    
     </main>
 
     <footer>
