--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
             <section>
                 <h3>Наша команда</h3>
                 <ul>
-                    <li><img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" /></li>
-                    <h3>Игорь Демьяненко</h3>
-                    Product Designer
-                    <li><img src="./img/5.jpg" alt="Ольга Репина" width="270" /></li>
-                    <h3>Ольга Репина</h3>
-                    Frontend Developer
-                    <li><img src="./img/6.jpg" alt="Николай Тарасов" width="270" /><li>
-                    <h3>Николай Тарасов</h3>
-                    Marketing
-                    <li><img src="./img/7.jpg" alt="Михаил Ермаков" width="270" /></li>
-                    <h3>Михаил Ермаков</h3>
-                    UI Designer
+                    <li><img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" />
+                    Игорь Демьяненко
+                    Product Designer</li>
+                    <li><img src="./img/5.jpg" alt="Ольга Репина" width="270" />
+                    Ольга Репина
+                    Frontend Developer</li>
+                    <li><img src="./img/6.jpg" alt="Николай Тарасов" width="270" />
+                    Николай Тарасов
+                    Marketing</li>
+                    <li><img src="./img/7.jpg" alt="Михаил Ермаков" width="270" />
+                    Михаил Ермаков
+                    UI Designer</li>
                 </ul>
             </section>
     
