Поправила png на jpg. Убрала <h2>

--- a/index.html
+++ b/index.html
@@ -35,53 +35,53 @@
         <section>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
             </section>
             <section>
-                <h3>Чем мы занимаемся</h3>
+                <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="./img/1.png" alt="Внимание к деталям" width="370" /></li>
-                    <li><img src="./img/2.png" alt="Планирование" width="370" /></li>
-                    <li><img src="./img/3.png" alt="Современные технологии" width="370" /></li>
+                    <li><img src="./img/деталям.jpg" alt="Внимание к деталям" width="370" /></li>
+                    <li><img src="./img/планирование.jpg" alt="Планирование" width="370" /></li>
+                    <li><img src="./img/технологии.jpg" alt="Современные технологии" width="370" /></li>
                 </ul>
             </section>
           
 
             <section>
-                <h3>Наша команда</h3>
+                <h2>Наша команда</h2>
                 <ul>
-                    <li><img src="./img/4.jpg" alt="Игорь Демьяненко" width="270" />
-                    Игорь Демьяненко
+                    <li><img src="./img/Демьяненко.jpg" alt="Игорь Демьяненко" width="270" />
+                    <h3>Игорь Демьяненко</h3>
                     Product Designer</li>
-                    <li><img src="./img/5.jpg" alt="Ольга Репина" width="270" />
-                    Ольга Репина
+                    <li><img src="./img/Репина.jpg" alt="Ольга Репина" width="270" />
+                    <h3>Ольга Репина</h3>
                     Frontend Developer</li>
-                    <li><img src="./img/6.jpg" alt="Николай Тарасов" width="270" />
-                    Николай Тарасов
+                    <li><img src="./img/Тарасов.jpg" alt="Николай Тарасов" width="270" />
+                    <h3>Николай Тарасов</h3>
                     Marketing</li>
-                    <li><img src="./img/7.jpg" alt="Михаил Ермаков" width="270" />
-                    Михаил Ермаков
+                    <li><img src="./img/Ермаков.jpg" alt="Михаил Ермаков" width="270" />
+                    <h3>Михаил Ермаков</h3>
                     UI Designer</li>
                 </ul>
             </section>
